--- a/app/i18n/locales/ar.json
+++ b/app/i18n/locales/ar.json
@@ -369,5 +369,19 @@
     "noStudentsMessage": "ستظهر تصنيفات الطلاب هنا عندما تكون متاحة.",
     "points": "{{count}} نقطة",
     "lessons": "{{count}} دروس مكتملة"
+  },
+  "months": {
+    "m1": "يناير",
+    "m2": "فبراير",
+    "m3": "مارس",
+    "m4": "أبريل",
+    "m5": "مايو",
+    "m6": "يونيو",
+    "m7": "يوليو",
+    "m8": "أغسطس",
+    "m9": "سبتمبر",
+    "m10": "أكتوبر",
+    "m11": "نوفمبر",
+    "m12": "ديسمبر"
   }
 }
