--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -369,5 +369,19 @@
     "noStudentsMessage": "Student rankings will appear here once available.",
     "points": "{{count}} points",
     "lessons": "{{count}} lessons completed"
+  },
+  "months": {
+    "m1": "January",
+    "m2": "February",
+    "m3": "March",
+    "m4": "April",
+    "m5": "May",
+    "m6": "June",
+    "m7": "July",
+    "m8": "August",
+    "m9": "September",
+    "m10": "October",
+    "m11": "November",
+    "m12": "December"
   }
 }
