--- a/app/i18n/locales/ar.json
+++ b/app/i18n/locales/ar.json
@@ -293,13 +293,27 @@
     "registered": "مسجل",
     "files": "الملفات",
     "noFiles": "لا توجد ملفات",
-    "chats": "المحادثات",
+    "chats": "المحادثة",
     "noMessages": "لا توجد رسائل بعد",
     "noGroups": "لا توجد مجموعات",
     "notAssigned": "لم يتم تعيينك لأي مجموعة بعد.",
     "groupDetails": "تفاصيل المجموعة",
     "group": "المجموعة",
-    "noMembers": "لا يوجد أعضاء بعد"
+    "noMembers": "لا يوجد أعضاء بعد",
+    "info": "معلومات",
+    "searchStudents": "بحث عن طلاب...",
+    "inviteStudent": "دعوة طالب",
+    "removeStudent": "إزالة طالب",
+    "confirmRemove": "هل أنت متأكد من إزالة",
+    "remove": "إزالة",
+    "removeError": "فشل في إزالة الطالب.",
+    "typeMessage": "اكتب رسالة...",
+    "deleteMessage": "حذف هذه الرسالة؟",
+    "startDate": "تاريخ البدء",
+    "createdAt": "تاريخ الإنشاء",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "status": "الحالة"
   },
   "news": {
     "title": "الأخبار",
