--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -293,13 +293,27 @@
     "registered": "Registered",
     "files": "Files",
     "noFiles": "No files found",
-    "chats": "Conversations",
+    "chats": "Chat",
     "noMessages": "No messages yet",
     "noGroups": "No groups found",
     "notAssigned": "You are not assigned to any groups yet.",
     "groupDetails": "Group Details",
     "group": "Group",
-    "noMembers": "No members yet"
+    "noMembers": "No members yet",
+    "info": "Info",
+    "searchStudents": "Search students...",
+    "inviteStudent": "Invite Student",
+    "removeStudent": "Remove Student",
+    "confirmRemove": "Are you sure you want to remove",
+    "remove": "Remove",
+    "removeError": "Failed to remove student.",
+    "typeMessage": "Type a message...",
+    "deleteMessage": "Delete this message?",
+    "startDate": "Start Date",
+    "createdAt": "Created",
+    "active": "Active",
+    "inactive": "Inactive",
+    "status": "Status"
   },
   "news": {
     "title": "News",
